Check investment-only reports and only add subaccounts if the balance is non-zero or there are related transactions.

BUG:280368
REVIEW:6779

svn path=/trunk/extragear/office/kmymoney/; revision=1250384